# basic-bevy-template

./: .gitignore  LICENSE-MIT  README.md
template/: Cargo.toml  README.md  cargo-generate.toml
template/src/: main.rs
