[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

# This is required if you are using Cargo Workspaces (https://bevyengine.org/learn/book/getting-started/setup/#cargo-workspaces)
[workspace]
resolver = "2"
members = []


# Performance optimisations as recommended by Bevy (https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


# Dynamic linking currently does not work on windows. 
[target.'cfg(windows)'.dependencies]
bevy = { version = "0.9.1", features = [] }
[target.'cfg(not(windows))'.dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }

[dependencies]
bevy-inspector-egui = "0.15.0"
